feat: :sparkles: oeuvre section

--- a/index.html
+++ b/index.html
@@ -32,5 +32,26 @@
             <h1 class="text-center text-3xl">Liste de lecture<br><span class="tolkien-font text-5xl">Tolkien</span></h1>
         </div>
     </header>
+    <main class="mx-52">
+        <section id="oeuvre" class="mt-10">
+            <div class="text-center">
+                <h1 class="text-2xl mb-5">Les livres de <span class="tolkien-font text-5xl">Tolkien</span></h1>
+                <p>Cette liste ne comprend pas tous les écrits posthumes de Tolkien, tels que "Les enfants de Hürin" et "Biblo le Hobbit : Histoire d'un aller retour", qui ont été édités et publiés par Christopher Tolkien, le fils de J.R.R Tolkien, après sa mort</p>
+            </div>
+            <ul class="flex flex-wrap gap-5 my-10">
+                <li>Le Hobbit</li>
+                <li>Le seigneur des Anneaux - La communauté de l'anneau</li>
+                <li>Le seigneur des Anneaux - Les deux tours</li>
+                <li>Le seigneur des Anneaux - Le retour du roi</li>
+                <li>Le silmarillion</li>
+                <li>Contes et légendes inachevés</li>
+                <li>Les enfants de Húrin</li>
+                <li>Bilbo le Hobbit : Histoire d'un aller et retour</li>
+            </ul>
+        </section>
+        <section id="order"></section>
+        <section id="history"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
