feat: :sparkles: order section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main class="mx-52">
         <section id="oeuvre" class="mt-10">
             <div class="text-center">
-                <h1 class="text-2xl mb-5">Les livres de <span class="tolkien-font text-5xl">Tolkien</span></h1>
+                <h2 class="text-2xl mb-5">Les livres de <span class="tolkien-font text-3xl">Tolkien</span></h2>
                 <p>Cette liste ne comprend pas tous les écrits posthumes de Tolkien, tels que "Les enfants de Hürin" et "Biblo le Hobbit : Histoire d'un aller retour", qui ont été édités et publiés par Christopher Tolkien, le fils de J.R.R Tolkien, après sa mort</p>
             </div>
             <ul class="flex flex-wrap gap-5 my-10">
@@ -49,7 +49,108 @@
                 <li>Bilbo le Hobbit : Histoire d'un aller et retour</li>
             </ul>
         </section>
-        <section id="order"></section>
+        <section id="order">
+            <div class="text-center">
+                <h2 class="text-2xl mb-5"><span class="tolkien-font text-3xl">Ordre</span> de lecture recommandé</h2>
+                <p>Voici la liste des romans de l'univers Tolkien (y compris ceux sortis à titre posthumes) selon l'ordre de lecture recommandé.</p>
+            </div>
+            <ul class="flex flex-wrap gap-5 my-10">
+                <li>
+                    <div>
+                        <small>1937</small>
+                        <h3>Le hobbit</h3>
+                        <p>Bilbo Baggins, un hobbit paisible, se retrouve embarqué dans une aventure extraordinaire lorsqu'il est recruté par un groupe de nains pour récupérer un trésor gardé par le dragon Smaug.</p>
+                    </div>
+                    <img src="assets/img/covers/hobbit.jpg" alt="Hobbit cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1954</small>
+                        <h3>La Communauté de l'anneau</h3>
+                        <p>Frodo Baggins, un hobbit, se voit confier la tâche de détruire l'Anneau unique, une arme puissante convoitée par le seigneur des Ténèbres Sauron, en formant une communauté de compagnons pour l'accompagner.</p>
+                        <span>Le seigneur des anneaux</span>
+                    </div>
+                    <img src="assets/img/covers/lotr1.jpg" alt="lotr1 cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1954</small>
+                        <h3>Les Deux Tours</h3>
+                        <p>La communauté se divise, et Frodo poursuit sa quête pour détruire l'Anneau, tandis que ses compagnons affrontent de nombreux dangers dans leur lutte contre les forces de Sauron.</p>
+                        <span>Le seigneur des anneaux</span>
+                    </div>
+                    <img src="assets/img/covers/lotr2.png" alt="lotr2 cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1955</small>
+                        <h3>Le Retour du Roi</h3>
+                        <p>La quête d eFrodo atteint son point culminant alors qu'il se rapproche du Mont du Destin pour détruire l'Anneau, tandis que la guerre entre les forces de la Terre du Milieu et Sauron atteint son apogée.</p>
+                        <span>Le seigneur des anneaux</span>
+                    </div>
+                    <img src="assets/img/covers/lotr3.jpg" alt="lotr3 cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1977</small>
+                        <h3>Le Silmarillion</h3>
+                        <p>Un recueil d'histoires et de légendes qui raconte la création du monde, Arda, et les événements majeurs qui ont façonné son histoire, y compris les conflits entre les elfes et les forces du mal.</p>
+                    </div>
+                    <img src="assets/img/covers/silmarillion.jpg" alt="silmarillion cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1980</small>
+                        <h3>Contes et légendes inachevés</h3>
+                        <p>Une collection d'histoires inachevées et de fragments qui complètent les récits du Silmarillion et du Seigneur des Anneaux, fournissant plus de détails sur les personnages, les lieux et les événements de la Terre du Milieu.</p>
+                    </div>
+                    <img src="assets/img/covers/contesinacheves.jpg" alt="contesinacheves cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>2007</small>
+                        <h3>Les Enfants de Húrin</h3>
+                        <p>Une histoire tragique se déroulant dans le Premier Âge de la Terre du Milieu, centrée sur le destin de Túrin Turambar, un homme maudit confronté à des épreuves et des tragédies.</p>
+                    </div>
+                    <img src="assets/img/covers/hurin.jpg" alt="hurin cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1983</small>
+                        <h3>La Formation de la Terre du Milieu</h3>
+                        <p>Le premier volume de la série "The History of Middle-earth", édité par Christopher Tolkien, qui explore les premiers développements et les premières versions des récits de la Terre du Milieu.</p>
+                        <span>The history of middle-earth</span>
+                    </div>
+                    <img src="assets/img/covers/formation.jpg" alt="formation cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1962</small>
+                        <h3>Les Aventures de Tom Bombadil</h3>
+                        <p>Une collection de poèmes et de récits en vers mettant en scène le personnage de Tom Bombadil, apparu brièvement dans Le Seigneur des Anneaux.</p>
+                    </div>
+                    <img src="assets/img/covers/bombadil.jpg" alt="bombadil cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1987</small>
+                        <h3>La Route perdue et autres textes</h3>
+                        <p>Le cinquième volume de la série "The History of Middle-earth", qui présente des textes et des fragments inachevés liés aux récits du Silmarillion et du Seigneur des Anneaux.</p>
+                        <span>The history of middle-earth</span>
+                    </div>
+                    <img src="assets/img/covers/routeperdue.jpg" alt="routeperdue cover" />
+                </li>
+                <li>
+                    <div>
+                        <small>1983</small>
+                        <h3>Les Contes perdus</h3>
+                        <p>Le deuxième volume de la série "The History of Middle-earth", contenant des histoires et des versions alternatives des récits du Silmarillion.</p>
+                        <span>The history of middle-earth</span>
+                    </div>
+                    <img src="assets/img/covers/contesperdus.jpg" alt="contesperdus cover" />
+                </li>
+            </ul>
+        </section>
         <section id="history"></section>
     </main>
     <footer></footer>
