--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h1 class="text-center text-3xl">Liste de lecture<br><span class="tolkien-font text-5xl">Tolkien</span></h1>
         </div>
     </header>
-    <main class="mx-52">
-        <section id="oeuvre" class="mt-10">
+    <main>
+        <section id="oeuvre" class="mt-10 px-52">
             <div class="text-center">
                 <h2 class="text-2xl mb-5">Les livres de <span class="tolkien-font text-3xl">Tolkien</span></h2>
                 <p>Cette liste ne comprend pas tous les écrits posthumes de Tolkien, tels que "Les enfants de Hürin" et "Biblo le Hobbit : Histoire d'un aller retour", qui ont été édités et publiés par Christopher Tolkien, le fils de J.R.R Tolkien, après sa mort</p>
@@ -49,7 +49,7 @@
                 <li>Bilbo le Hobbit : Histoire d'un aller et retour</li>
             </ul>
         </section>
-        <section id="order">
+        <section id="order" class="px-52 py-10">
             <div class="text-center">
                 <h2 class="text-2xl mb-5"><span class="tolkien-font text-3xl">Ordre</span> de lecture recommandé</h2>
                 <p>Voici la liste des romans de l'univers Tolkien (y compris ceux sortis à titre posthumes) selon l'ordre de lecture recommandé.</p>
@@ -151,7 +151,17 @@
                 </li>
             </ul>
         </section>
-        <section id="history"></section>
+        <section id="history" class="px-52 py-10 flex gap-5">
+            <div class="flex flex-col gap-5">
+                <h2 class="text-2xl">L'histoire de ces <span class="tolkien-font text-3xl">OEUVRES</span></h2>
+                <p>Le processus de publication des œuvres de J.R.R. Tolkien et le rôle de son fils dans la perpétuation de ces œuvres sont étroitement liés. Tout au long de sa carrière, J.R.R. Tolkien a créé un vaste univers avec des récits complexes et des langues élaborées, mais il n'a pas pu terminer toutes ses œuvres avant sa mort en 1973.</p>
+                <p>C'est là que Christopher Tolkien, son fils, a joué un rôle essentiel. En tant qu'éditeur et archiviste méticuleux, Christopher a consacré des années à examiner les notes, les brouillons et les manuscrits de son père, travaillant sans relâche pour donner vie à ces œuvres inachevées. Il a édité et publié des livres tels que "Le Silmarillion", "Les Enfants de Húrin" et "Contes et légendes inachevés", offrant aux lecteurs un aperçu plus approfondi de l'univers de la Terre du Milieu. Grâce à son travail diligent et respectueux de la vision de son père, Christopher Tolkien a permis aux fans de Tolkien de continuer à explorer et à apprécier son héritage littéraire bien au-delà de son décès.</p>
+            </div>
+            <div class="flex flex-col justify-center items-center [500px] min-w-[300px]">
+                <img src="assets/img/tolkien.jpg" alt="tolkien portrait" class="mr-[-70px] mb-[-30px] z-10" id="tolkien_img" />
+                <img src="assets/img/christopher.jpeg" alt="christopher portrait" class="ml-[-50px] mt-[-30px]" id="christopher_img" />
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
