feat: :sparkles: footer

--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="flex flex-col justify-center items-center gap-5 text-white py-10">
+        <img src="assets/img/logo.jpg" alt="logo" class="w-10" />
+        <p>Les textes sont générés par ChatGTP. La plupart des images de couvertures proviennent soit de <span class="text-[#50223f]">Tolkiendil</span> soit d'Amazon</p>
+        <p>2023 © AH</p>
+    </footer>
 </body>
 </html>
