feat: :sparkles: responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="text-white">
-        <nav class="flex justify-between mx-52 pt-5">
+        <nav class="flex justify-between px-g pt-5">
             <img src="assets/img/logo.jpg" alt="Logo LOTR" class="w-10" />
             <ul class="flex gap-5">
                 <li><a href="#oeuvre">Oeuvres</a></li>
@@ -33,12 +33,12 @@
         </div>
     </header>
     <main>
-        <section id="oeuvre" class="mt-10 px-52">
+        <section id="oeuvre" class="mt-10 px-g">
             <div class="text-center">
                 <h2 class="text-2xl mb-5">Les livres de <span class="tolkien-font text-3xl">Tolkien</span></h2>
                 <p>Cette liste ne comprend pas tous les écrits posthumes de Tolkien, tels que "Les enfants de Hürin" et "Biblo le Hobbit : Histoire d'un aller retour", qui ont été édités et publiés par Christopher Tolkien, le fils de J.R.R Tolkien, après sa mort</p>
             </div>
-            <ul class="flex flex-wrap gap-5 my-10">
+            <ul class="flex justify-center flex-wrap gap-5 my-10">
                 <li>Le Hobbit</li>
                 <li>Le seigneur des Anneaux - La communauté de l'anneau</li>
                 <li>Le seigneur des Anneaux - Les deux tours</li>
@@ -49,12 +49,12 @@
                 <li>Bilbo le Hobbit : Histoire d'un aller et retour</li>
             </ul>
         </section>
-        <section id="order" class="px-52 py-10">
+        <section id="order" class="px-g py-10">
             <div class="text-center">
                 <h2 class="text-2xl mb-5"><span class="tolkien-font text-3xl">Ordre</span> de lecture recommandé</h2>
                 <p>Voici la liste des romans de l'univers Tolkien (y compris ceux sortis à titre posthumes) selon l'ordre de lecture recommandé.</p>
             </div>
-            <ul class="flex flex-wrap gap-5 my-10">
+            <ul class="flex justify-center flex-wrap gap-5 my-10">
                 <li>
                     <div>
                         <small>1937</small>
@@ -151,13 +151,13 @@
                 </li>
             </ul>
         </section>
-        <section id="history" class="px-52 py-10 flex gap-5">
-            <div class="flex flex-col gap-5">
+        <section id="history" class="px-g py-10 flex flex-wrap-reverse justify-center gap-5">
+            <div class="grow basis-[400px] flex flex-col gap-5">
                 <h2 class="text-2xl">L'histoire de ces <span class="tolkien-font text-3xl">OEUVRES</span></h2>
                 <p>Le processus de publication des œuvres de J.R.R. Tolkien et le rôle de son fils dans la perpétuation de ces œuvres sont étroitement liés. Tout au long de sa carrière, J.R.R. Tolkien a créé un vaste univers avec des récits complexes et des langues élaborées, mais il n'a pas pu terminer toutes ses œuvres avant sa mort en 1973.</p>
                 <p>C'est là que Christopher Tolkien, son fils, a joué un rôle essentiel. En tant qu'éditeur et archiviste méticuleux, Christopher a consacré des années à examiner les notes, les brouillons et les manuscrits de son père, travaillant sans relâche pour donner vie à ces œuvres inachevées. Il a édité et publié des livres tels que "Le Silmarillion", "Les Enfants de Húrin" et "Contes et légendes inachevés", offrant aux lecteurs un aperçu plus approfondi de l'univers de la Terre du Milieu. Grâce à son travail diligent et respectueux de la vision de son père, Christopher Tolkien a permis aux fans de Tolkien de continuer à explorer et à apprécier son héritage littéraire bien au-delà de son décès.</p>
             </div>
-            <div class="flex flex-col justify-center items-center [500px] min-w-[300px]">
+            <div class="grow-2 basis-[300px] flex flex-col justify-center items-center [500px]">
                 <img src="assets/img/tolkien.jpg" alt="tolkien portrait" class="mr-[-70px] mb-[-30px] z-10" id="tolkien_img" />
                 <img src="assets/img/christopher.jpeg" alt="christopher portrait" class="ml-[-50px] mt-[-30px]" id="christopher_img" />
             </div>
